WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
146540
iOS WebKitLegacy should match WebKit2's viewport behavior
https://bugs.webkit.org/show_bug.cgi?id=146540
Summary
iOS WebKitLegacy should match WebKit2's viewport behavior
Tim Horton
Reported
2015-07-02 00:03:09 PDT
iOS WebKitLegacy should match WebKit2's viewport behavior
Attachments
Patch
(4.49 KB, patch)
2015-07-02 00:05 PDT
,
Tim Horton
mitz: review+
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2015-07-02 00:05:48 PDT
Created
attachment 255994
[details]
Patch
WebKit Commit Bot
Comment 2
2015-07-02 00:08:02 PDT
Attachment 255994
[details]
did not pass style-queue: ERROR: Source/WebKit/ios/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] ERROR: Source/WebKit/mac/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] Total errors found: 2 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 3
2015-07-02 00:34:28 PDT
Comment on
attachment 255994
[details]
Patch Rejecting
attachment 255994
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.appspot.com', '--bot-id=webkit-cq-01', 'validate-changelog', '--check-oops', '--non-interactive', 255994, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit ChangeLog entry in Source/WebKit/ios/ChangeLog contains OOPS!. Full output:
http://webkit-queues.appspot.com/results/6726243328196608
Tim Horton
Comment 4
2015-07-02 00:37:42 PDT
http://trac.webkit.org/changeset/186223
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug