iOS WebKitLegacy should match WebKit2's viewport behavior https://bugs.webkit.org/show_bug.cgi?id=146540 <rdar://problem/20574017>

Reviewed by Dan Bernstein.

A number of changes have been made to WebKit2's viewport behavior
to make it possible to scale "responsive" sites that misbehave (lay out
in a non-responsive way).

* History/WebHistoryItem.mm:
* History/WebHistoryItemPrivate.h:
Add the plumbing required to implement these new behaviors in WebKit1.

* WebKit.iOS.exp:


Canonical link: https://commits.webkit.org/164635@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@186223 268f45cc-cd09-0410-ab3c-d52691b4dbfc